[gd_scene load_steps=9 format=3 uid="uid://cjbau1iog5b6u"]

[ext_resource type="Script" path="res://addons/skillcap_dialogue_nodes/objects/DialogueParser.gd" id="1_cxv4l"]
[ext_resource type="Script" path="res://addons/skillcap_dialogue_nodes/nodes/dialogue_bubble.gd" id="1_xuoxo"]
[ext_resource type="Script" path="res://addons/skillcap_dialogue_nodes/objects/bbcodeWait.gd" id="2_afww6"]
[ext_resource type="Script" path="res://addons/skillcap_dialogue_nodes/objects/bbcodeGhost.gd" id="3_nq1fs"]
[ext_resource type="Script" path="res://addons/skillcap_dialogue_nodes/objects/bbcodeMatrix.gd" id="4_ua0e7"]

[sub_resource type="RichTextEffect" id="RichTextEffect_kq87j"]
script = ExtResource("2_afww6")

[sub_resource type="RichTextEffect" id="RichTextEffect_vm7ia"]
script = ExtResource("3_nq1fs")

[sub_resource type="RichTextEffect" id="RichTextEffect_ieyfc"]
script = ExtResource("4_ua0e7")

[node name="DialogueBubble" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 14.0
script = ExtResource("1_xuoxo")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_right = 300.0
offset_bottom = 14.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="DialogueLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 10
theme_override_font_sizes/italics_font_size = 10
theme_override_font_sizes/mono_font_size = 10
theme_override_font_sizes/normal_font_size = 10
theme_override_font_sizes/bold_font_size = 10
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, foo bar baz
"
fit_content = true
custom_effects = [SubResource("RichTextEffect_kq87j"), SubResource("RichTextEffect_vm7ia"), SubResource("RichTextEffect_ieyfc")]

[node name="Options" type="BoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="SpeakerPivot" type="Control" parent="Panel"]
anchors_preset = 0

[node name="SpeakerLabel" type="Label" parent="Panel/SpeakerPivot"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 63.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Speaker"

[node name="DialogueParser" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_cxv4l")

[node name="LifetimeTimer" type="Timer" parent="."]
unique_name_in_owner = true
